
instbindir = @ROOT_INST_DIR@/@NATIVE_OSTYPE@-@NATIVE_ARCHTYPE@-Profile/bin

instbin_SCRIPTS = \
  plplugin \
  plremote \
  plscript \
  plscript-batch \
  plpython \
  plui


instsbindir = @ROOT_INST_DIR@/@NATIVE_OSTYPE@-@NATIVE_ARCHTYPE@-Profile/sbin

if FOUNDATION
admin_scripts = \
  plfilemgr \
  plmaster \
  plpluginmgr \
  plqueuemgr
endif

instsbin_SCRIPTS = \
  pljobmgr \
  $(admin_scripts)
